<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/itemAdd"
        android:icon="@android:drawable/ic_menu_add"
        android:title="@string/itemAdd"
        android:visible="true"
        app:showAsAction="always" />
    <item
        android:id="@+id/itemDelete"
        android:icon="@android:drawable/ic_menu_delete"
        android:title="@string/itemBorrar" />
    <item
        android:id="@+id/itemOrdenar"
        android:icon="@android:drawable/ic_menu_sort_alphabetically"
        android:title="@string/itemOrdenar"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/itemValorar"
        android:title="@string/itemValorar"
        app:showAsAction="never" />
    <item
        android:id="@+id/itemMostrar"
        android:title="@string/itemMostrar"
        app:showAsAction="never" />
    <item
        android:id="@+id/itemOpciones"
        android:title="@string/itemOpciones"
        app:showAsAction="never" />
    <item
        android:id="@+id/itemAcercaDe"
        android:title="@string/itemAcercaDe"
        app:showAsAction="never" />
</menu>